maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:5: error: value foreach is not a member of Int
        for (a <- random3()){
                         ^