maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (isOverBaggle == false){
      if (isFacingWall==true){
        for (a <- random3()){
          left()
        }
        
      }
      else {
        forward(random3())
      }
    }
  pickupBaggle()
}